Fix wrong color for tables

--- a/style/theme/_colours.scss
+++ b/style/theme/_colours.scss
@@ -353,7 +353,7 @@ table.table1 tbody tr:hover, table.table1 tbody tr.hover {
 }
 
 table.table1 td {
-	color: $tab-color;
+	color: $text-color;
 }
 
 table.table1 tbody td {
